link Main JS to HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav" id="nav">
 
             <a href="" class="nav__logo">
-                In<b>Go</b>
+                In<b class="ingo-logo-go">Go</b>
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -50,5 +50,7 @@
         
     </header>
     
+    <!--MAIN JS-->
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
