--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
         </nav>
         
     </header>
+
+    <main>
+
+        <section class="home__section" id="home">
+            <div class="home__container">
+                <div class="home__text">
+                    <h1><b>Discover</b>your adventure</h1>
+                    <p>We believe adventure has no bounds, no definition. 
+                        It´s a frame of mind, a spirit, a choice.
+                    </p>
+                </div>
+
+                <div class="home__img">
+                    <img src="" alt="">
+                    <div class="home__img-selector">
+                        <button id="img__change-left">Left</button>
+                        <button id="img__change-right">Right</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
     <!--MAIN JS-->
     <script src="assets/js/main.js"></script>
