CSS Home page styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="header" id="header">
-        <nav class="nav" id="nav">
+        <nav class="nav section" id="nav">
 
             <a href="" class="nav__logo">
                 In<b class="ingo-logo-go">Go</b>
@@ -52,24 +52,43 @@
 
     <main>
 
-        <section class="home__section" id="home">
+        <section class="home__section section" id="home">
             <div class="home__container">
-                <div class="home__text">
-                    <h1><b>Discover</b>your adventure</h1>
-                    <p>We believe adventure has no bounds, no definition. 
-                        It´s a frame of mind, a spirit, a choice.
-                    </p>
-                </div>
 
-                <div class="home__img">
-                    <img src="" alt="">
+                <div class="home__data">
+                    <div class="home__text">
+                        <h1><b>Discover</b> your adventure</h1>
+                        <p>We believe adventure has no bounds, no definition. <br>
+                            It´s a frame of mind, a spirit, a choice.
+                        </p>
+                    </div>
+
                     <div class="home__img-selector">
-                        <button id="img__change-left">Left</button>
-                        <button id="img__change-right">Right</button>
+                        <button id="img__change-left">
+                            <i class="ri-arrow-left-line"></i>
+                        </button>
+                        <button id="img__change-right">
+                            <i class="ri-arrow-right-line"></i>
+                        </button>
+                    </div>
+
+                    <div class="home__social">
+                        <i class="ri-instagram-line"></i>
+                        <i class="ri-twitter-fill"></i>
+                        <i class="ri-linkedin-box-fill"></i>
                     </div>
                 </div>
+              
+
+                <div class="home__img">
+                    <img src="assets/img/climbing.jpg" alt="">
+                    <span id="img__display">01</span>
+                </div>
+
             </div>
+
         </section>
+
     </main>
     
     <!--MAIN JS-->
