HTML Find yourself section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,56 @@
 
         </section>
 
+        <section class="find__section section" id="find">
+            <h1 class="section__title">find yourself</h1>
+
+            <div class="find__container container">
+                
+                <div class="adventure__card" id="adventure-card-1">
+                    <h2>Cycling</h2>
+
+                    <img src="assets/img/cycling.jpg" alt="">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio velit magnam perspiciatis vero, 
+                        debitis omnis fuga tempore delectus officia sed, cumque itaque beatae similique amet veritatis vel 
+                        mollitia maiores voluptatem!
+                    </p>
+
+                    <a href="">Read More...</a>
+                </div>
+
+                <div class="adventure__card" id="adventure-card-2">
+                    <h2>Safari</h2>
+
+                    <img src="assets/img/safari.jpg" alt="">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio velit magnam perspiciatis vero, 
+                        debitis omnis fuga tempore delectus officia sed, cumque itaque beatae similique amet veritatis vel 
+                        mollitia maiores voluptatem!
+                    </p>
+
+                    <a href="">Read More...</a>
+                </div>
+
+
+                <div class="adventure__card" id="adventure-card-3">
+                    <h2>Skydiving</h2>
+
+                    <img src="assets/img/skidiving.jpg" alt="">
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio velit magnam perspiciatis vero, 
+                        debitis omnis fuga tempore delectus officia sed, cumque itaque beatae similique amet veritatis vel 
+                        mollitia maiores voluptatem!
+                    </p>
+
+                    <a href="">Read More...</a>
+                </div>
+
+
+
+            </div>
+        </section>
+
     </main>
     
     <!--MAIN JS-->
