--- a/index.html
+++ b/index.html
@@ -152,6 +152,39 @@
             </div>
         </section>
 
+        <section class="places__section section">
+            <h1 class="section__title">New Places</h1>
+            <div class="places__container">
+                <div class="places__layer pink-color" id="place-color-layer">
+
+                </div>
+
+                <div class="places__video">
+                    <i class="ri-play-circle-line pink-color" id="play-button"></i>
+                    <img id="place-img" src="assets/img/new-place-1.jpg" alt="">
+                </div>
+
+                <div class="places__data">
+                    <h3 class="pink-color" id="place__date">Aug 22, 2022</h3>
+
+                    <h2 id="place__location">Alaska</h2>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis dolor ratione necessitatibus tenetur excepturi</p>
+
+                    <a class="pink-color" id="place-link" href="">Read more...</a>
+
+                    <div class="places__changer">
+                        <button id="place-changer-left" onclick="changeColors()">
+                            <i class="ri-arrow-left-line pink-color" id="button-left"></i>
+                        </button>
+
+                        <button id="place-changer-right" onclick="changeColors()">
+                            <i class="ri-arrow-right-line pink-color" id="button-right"></i>
+                        </button>
+                    </div>
+            </div>
+        </section>
+
     </main>
     
     <!--MAIN JS-->
