--- a/index.html
+++ b/index.html
@@ -272,6 +272,68 @@
         </section>
 
     </main>
+
+    <footer class="footer">
+        <a href="" class="footer__logo">InGo</a>
+
+        <ul class="nav__footer" id="footer-about">
+            <a href="" class="nav__title">About</a>
+            <li class="footer__item">
+                <a href="" class="footer__link">About</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Help</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Contact</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Carrers</a>
+            </li>
+        </ul>
+
+        <ul class="nav__footer" id="footer-company">
+            <a href="" class="nav__title">Company</a>
+            <li class="footer__item">
+                <a href="" class="footer__link">Testimonials</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Brand</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Advertise</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">API</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Integrations</a>
+            </li>
+        </ul>
+
+        <ul class="nav__footer" id="footer-home">
+            <a href="" class="nav__title">Home</a>
+            <li class="footer__item">
+                <a href="" class="footer__link">About</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Help</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Contact</a>
+            </li>
+            <li class="footer__item">
+                <a href="" class="footer__link">Carrers</a>
+            </li>
+        </ul>
+
+        <ul class="nav__footer" id="footer-social">
+            <li><i class="ri-instagram-line"></i></li>
+            <li><i class="ri-twitter-fill"></i></li>
+            <li><i class="ri-linkedin-box-fill"></i></li> 
+        </ul>
+    </footer>
+
     
     <!--MAIN JS-->
     <script src="assets/js/main.js"></script>
