--- a/index.html
+++ b/index.html
@@ -273,11 +273,13 @@
 
     </main>
 
-    <footer class="footer">
-        <a href="" class="footer__logo">InGo</a>
+    <footer class="footer section">
+        <a href="" class="footer__logo">In<b class="ingo-logo-go">Go</b></a>
 
         <ul class="nav__footer" id="footer-about">
-            <a href="" class="nav__title">About</a>
+            <li class="footer__title">
+                <a href="" class="">About</a>
+            </li>
             <li class="footer__item">
                 <a href="" class="footer__link">About</a>
             </li>
@@ -293,7 +295,10 @@
         </ul>
 
         <ul class="nav__footer" id="footer-company">
-            <a href="" class="nav__title">Company</a>
+            <li class="footer__title">
+                <a href="" class="">Company</a>
+            </li>
+            
             <li class="footer__item">
                 <a href="" class="footer__link">Testimonials</a>
             </li>
@@ -312,7 +317,9 @@
         </ul>
 
         <ul class="nav__footer" id="footer-home">
-            <a href="" class="nav__title">Home</a>
+            <li class="footer__title">
+                <a href="" class="">Home</a>
+            </li>
             <li class="footer__item">
                 <a href="" class="footer__link">About</a>
             </li>
