--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="home__img-selector">
-                        <button id="img__change-left">
+                        <button class="green-color" id="img__change-left">
                             <i class="ri-arrow-left-line"></i>
                         </button>
                         <button id="img__change-right">
@@ -85,8 +85,9 @@
                         <img id="default-img" class="home__image" src="assets/img/climbing.jpg" alt="">
                         <img id="surfing-img" class="home__image" src="assets/img/surfing.jpg" alt="">
                         <img id="skydiving-img" class="home__image" src="assets/img/skydiving.jpg" alt="">
+                        <span id="img__display">01</span>
                     </div>
-                    <span id="img__display">01</span>
+                    
                 </div>
 
             </div>
@@ -345,7 +346,8 @@
         </ul>
     </footer>
 
-    
+    <!--SCROLL REVEAL-->
+    <script src="assets/js/scrollreveal.min.js"></script>
     <!--MAIN JS-->
     <script src="assets/js/main.js"></script>
 </body>
